[gd_scene load_steps=10 format=1]

[ext_resource path="res://script/Menu.gd" type="Script" id=1]
[ext_resource path="res://gfx/gui/menu-background.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Shadow.png" type="Texture" id=3]
[ext_resource path="res://gfx/gui/book.png" type="Texture" id=4]
[ext_resource path="res://script/MenuButton.gd" type="Script" id=5]
[ext_resource path="res://font/sigmar-one/SigmarOne.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://anim/menu-button-default.tres" type="Animation" id=7]
[ext_resource path="res://anim/menu-button-hover.tres" type="Animation" id=8]

[sub_resource type="DynamicFont" id=1]

font/size = 64
font/use_mipmaps = false
font/use_filter = true
font/font = ExtResource( 6 )

[node name="Menu" type="Node"]

script/script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]

transform/pos = Vector2( 640, 480 )
texture = ExtResource( 2 )

[node name="Shadow1" type="Sprite" parent="."]

transform/pos = Vector2( 843.696, 857.387 )
transform/scale = Vector2( 7.63694, 0.929688 )
texture = ExtResource( 3 )

[node name="Exit" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 781.0
margin/top = 648.0
margin/right = 1293.0
margin/bottom = 844.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0
script/script = ExtResource( 5 )

[node name="Label" type="Label" parent="Exit"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 500.0
margin/bottom = 190.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Exit"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Exit"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Default = ExtResource( 7 )
anims/Hover = ExtResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="License" type="TextureButton" parent="."]

rect/rotation = 35.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 263.0
margin/top = 489.0
margin/right = 775.0
margin/bottom = 685.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 2, 2.2, 0, 1 )
script/script = ExtResource( 5 )

[node name="Label" type="Label" parent="License"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 0.0
margin/right = 510.0
margin/bottom = 190.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Licenses"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="License"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Default = ExtResource( 7 )
anims/Hover = ExtResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Settings" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 810.0
margin/top = 453.0
margin/right = 1322.0
margin/bottom = 649.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.3, 0.6, 2.5, 1 )
script/script = ExtResource( 5 )

[node name="Label" type="Label" parent="Settings"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 0.0
margin/right = 510.0
margin/bottom = 190.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Settings"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Settings"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Default = ExtResource( 7 )
anims/Hover = ExtResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="NewGame" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 791.0
margin/top = 258.0
margin/right = 1303.0
margin/bottom = 454.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.0961304, 0.984375, 0.276555, 1 )
script/script = ExtResource( 5 )

[node name="Label" type="Label" parent="NewGame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 0.0
margin/right = 510.0
margin/bottom = 190.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "New Game"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="NewGame"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Default = ExtResource( 7 )
anims/Hover = ExtResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="HighScore" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 251.0
margin/top = 650.0
margin/right = 763.0
margin/bottom = 846.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.790071, 0.0961304, 0.984375, 1 )
script/script = ExtResource( 5 )

[node name="Label" type="Label" parent="HighScore"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 0.0
margin/right = 510.0
margin/bottom = 190.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "High Score"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="HighScore"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Default = ExtResource( 7 )
anims/Hover = ExtResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Continue" type="TextureButton" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 809.0
margin/top = 63.0
margin/right = 1321.0
margin/bottom = 259.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 4 )
params/resize_mode = 0
params/stretch_mode = 0
params/modulate = Color( 0.871094, 0.129303, 0.129303, 1 )
script/script = ExtResource( 5 )

[node name="Label" type="Label" parent="Continue"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 0.0
margin/right = 510.0
margin/bottom = 190.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Continue"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Continue"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Default = ExtResource( 7 )
anims/Hover = ExtResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]

[connection signal="pressed" from="NewGame" to="." method="_on_NewGame_pressed"]

[connection signal="pressed" from="HighScore" to="." method="_on_HighScore_pressed"]

[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]


